API Docs overhaul
